# euclid

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  run.sh
include/: lexer.hpp  parser.hpp  position.hpp  token.hpp
include/ast/: ast_node.hpp  block.hpp  program.hpp
include/ast/definitions/: const_def.hpp
include/ast/expressions/: bin_expression.hpp  expression.hpp  func_expression.hpp  lit_expression.hpp  set_expression.hpp  unary_expression.hpp
include/ast/expressions/variables/: deref_var.hpp  dereferenced_var.hpp  indexed_var.hpp  named_var.hpp  record_var.hpp  var.hpp
include/ast/statements/: assign_stmt.hpp  compound_stmt.hpp  statement.hpp
include/lexer/: lexer.hpp  position.hpp  token.hpp
include/parser/: ast_node.hpp
include/parser/expressions/: bin_expression.hpp  expression.hpp  func_expression.hpp  lit_expression.hpp  unary_expression.hpp
include/parser/expressions/variable_expressions/: dereferenced_var.hpp  indexed_var.hpp  named_var.hpp  record_access.hpp  var_access.hpp
src/: lexer.cpp  main.cpp  parser.cpp  position.cpp  token.cpp
src/ast/: ast_node.cpp  block.cpp  program.cpp
src/ast/expressions/: bin_expression.cpp  expression.cpp  func_expression.cpp  lit_expression.cpp  set_expression.cpp  unary_expression.cpp
src/ast/expressions/variables/: deref_var.cpp  indexed_var.cpp  named_var.cpp  record_var.cpp  var.cpp
src/lexer/: lexer.cpp  position.cpp  token.cpp
src/statements/: assign_stmt.cpp  compound_stmt.cpp  statement.cpp
uml/: euclid.plantuml
